--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,3 @@
-apt-get update &&  apt-get install -y build-essential cargo
+buildCommand: |
+  apt-get update
+  apt-get install -y build-essential cargo
