--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,13 @@
-buildCommand: |
-  apt-get update
-  apt-get install -y build-essential cargo
+services:
+  - type: web
+    name: college-attendance-api
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn attendance.wsgi:application
+    envVars:
+      - key: DATABASE_URL
+        value: your_postgresql_database_url
+      - key: SECRET_KEY
+        generateValue: true
+      - key: ALLOWED_HOSTS
+        value: "*"
