--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+dj-database-url==2.3.0
 Django==5.1.7
 django-restframework==0.0.1
 djangorestframework==3.15.2
@@ -6,6 +7,7 @@ gunicorn==23.0.0
 packaging==24.2
 psycopg2-binary==2.9.10
 sqlparse==0.5.3
+typing_extensions==4.13.0
 tzdata==2025.2
 waitress==3.0.2
 whitenoise==6.9.0
