--- a/attendance/.env
+++ b/attendance/.env
@@ -1,8 +1,1 @@
-# DJANGO_SECRET_KEY=mLYHGxHeJoHgsc-X8m2qdwqvv9kM8CwlJKAxGuXL_MvMRvpcVV9Jf-bRflnTGW4d4FQ
-# DJANGO_DEBUG=True
-# DJANGO_ALLOWED_HOSTS=attendance-project-1.onrender.com,49.47.219.97
-# MYSQL_DATABASE=u440631799_softwear
-# MYSQL_USER=u440631799_softwear
-# MYSQL_PASSWORD=Accent@123$%
-# MYSQL_HOST=49.47.219.97
-# MYSQL_PORT=3306
+DATABASE_URL=postgresql://postgres:t7aS9Zv0WLhtiIKW@db.brimagonaojrftuqbpaj.supabase.co:5432/postgres
