--- a/attendance/.env
+++ b/attendance/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:t7aS9Zv0WLhtiIKW@db.brimagonaojrftuqbpaj.supabase.co:5432/postgres
+DATABASE_URL=postgresql://productiondatabase_yj8e_user:vJ1MMkKPNpweul9Fp5V8HskQum4Jh7PX@dpg-cvl7e295pdvs73d9uj6g-a.ohio-postgres.render.com/productiondatabase_yj8e
